* [TableOfContents] Fixed toggling component on mobile devices by click on title

--- a/demo/src/Components/TableOfContents/TableOfContents.scss
+++ b/demo/src/Components/TableOfContents/TableOfContents.scss
@@ -5,6 +5,8 @@
   align-items: flex-end;
   padding: 0 0 1rem 0;
   margin-top: -1.75rem;
+  position: relative;
+  z-index: 1;
 
   label {
     height: 1.5rem;
